fix icons fonts in base.css

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -165,9 +165,12 @@ label[for="body-width-range"] {
 /* ICON */
 
 .icon {
-    font-family: 'Material Icons', var(--common-font);
-
     display: inline-block;
+}
+
+.icon::after {
+    font-family: 'Material Icons';
+
     user-select: none;
     text-transform: none;
     text-decoration: none;
