--- a/templates/article/base.html
+++ b/templates/article/base.html
@@ -8,7 +8,7 @@
 
 
 {%- block content -%}
-    <h1>{%- block title -%}{%- endblock -%}</h1>
+    <h1 id="title">{%- block title -%}{%- endblock -%}</h1>
 
     {%- block article -%}
     {%- endblock -%}
