--- a/templates/source/file.html
+++ b/templates/source/file.html
@@ -24,9 +24,5 @@
 
 
 {%- block content -%}
-
-{%- call m.highlight(filename=filename) -%}
-{{ source }}
-{%- endcall -%}
-
+{% include "source/code.html" %}
 {%- endblock -%}
