add undeline to span with title

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -66,6 +66,10 @@ a {
     color: var(--fg-hl);
 }
 
+span[title]:hover {
+    text-decoration: underline dotted;
+}
+
 hr {
     margin-inline: 0;
     align-self: stretch;
