--- a/static/css/highlight.css
+++ b/static/css/highlight.css
@@ -9,9 +9,9 @@
     --tooltip-bg: #444;
     --tooltip-border: #888;
 
-    --button: #ddd0;
-    --button-hover: #ddd2;
-    --button-active: #ddd1;
+    --button: #2b2b2b;
+    --button-hover: #444;
+    --button-active: #333;
 }
 
 /* Source of the rest of the file: https://github.com/kakawait/pygments-darcula/blob/master/darcula.css */
