--- a/templates/base.html
+++ b/templates/base.html
@@ -8,12 +8,12 @@
 <html>
 
 <head>
-    <title> sliva0.tk - {% block title -%} {{ g.rpath.page_name }} {%- endblock -%} </title>
+    <title> {{ HOSTNAME }} - {% block title -%} {{ g.rpath.page_name }} {%- endblock -%} </title>
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.3, minimum-scale=0.7 user-scalable=yes">
-    <meta property="og:title" content="sliva0.tk - {{ self.title() }}">
+    <meta property="og:title" content="{{ HOSTNAME }} - {{ self.title() }}">
     <meta property="og:description" content="{%- block description -%} Small blog site made by t.me/sliva0 {%- endblock -%}">
-    <meta property="og:image" content="https://sliva0.tk/static/media/preview.png">
+    <meta property="og:image" content="/static/media/preview.png">
 
     <link rel="stylesheet" type="text/css" href="/static/css/base.css">
     <link rel="stylesheet" type="text/css" href="/static/css/themes.css">
