--- a/static/css/base.css
+++ b/static/css/base.css
@@ -107,6 +107,7 @@ button {
 }
 
 
+
 /* TABLES */
 
 .table-box {
@@ -139,6 +140,7 @@ th, td {
 }
 
 
+
 /* SCROLLBAR */
 
 ::-webkit-scrollbar {
@@ -150,6 +152,7 @@ th, td {
     border-radius: 1rem;
     background: var(--fg);
 }
+
 
 
 /* ADDITIONAL BLOCK PROPERTIES */
@@ -213,6 +216,7 @@ label[for="body-width-range"] {
 }
 
 
+
 /* ARTICLE PREVIEW */
 
 .preview-block {
@@ -232,6 +236,8 @@ label[for="body-width-range"] {
 .preview>* {
     margin: 0;
 }
+
+
 
 /* ICON */
 
@@ -279,6 +285,7 @@ label[for="body-width-range"] {
 }
 
 
+
 /* BUTTON */
 
 .text-block, .button {
@@ -303,7 +310,7 @@ label[for="body-width-range"] {
     color: inherit;
     background: inherit;
     font-size: 1em;
-    
+
     cursor: pointer;
     user-select: none;
     text-decoration: none;
@@ -318,6 +325,7 @@ label[for="body-width-range"] {
 .preview:active, .button:active {
     background: var(--active);
 }
+
 
 
 /* SWITCH */
@@ -357,6 +365,7 @@ input:checked+.slider {
 input:checked+.slider::after {
     left: 1em;
 }
+
 
 
 /* RANGE */
@@ -408,9 +417,23 @@ input:checked+.slider::after {
 }
 
 
-/* HIGHLIGHT */
+
+/* CODE HIGHLIGHT */
 
 .highlight-block {
+    --hl-fg: #def;
+    --hl-fg-hover: #abc;
+    --text: #A9B7C6;
+
+    --frame: #777;
+    --string-start: #666;
+    --tooltip-bg: #444;
+    --tooltip-border: #888;
+
+    --button: #2b2b2b;
+    --button-hover: #444;
+    --button-active: #333;
+
     border-radius: 0.4rem;
     padding: 0.2rem;
     margin: 0.5rem;
