--- a/static/css/highlight.css
+++ b/static/css/highlight.css
@@ -1,20 +1,4 @@
-/* COLORS OF HIGHLIGHT ELEMENTS */
-.highlight-block {
-    --hl-fg: #def;
-    --hl-fg-hover: #abc;
-    --text: #A9B7C6;
-
-    --frame: #777;
-    --string-start: #666;
-    --tooltip-bg: #444;
-    --tooltip-border: #888;
-
-    --button: #2b2b2b;
-    --button-hover: #444;
-    --button-active: #333;
-}
-
-/* Source of the rest of the file: https://github.com/kakawait/pygments-darcula/blob/master/darcula.css */
+/* Source: https://github.com/kakawait/pygments-darcula/blob/master/darcula.css */
 
 /* ----[ BASE ]---- */
 
