add code styles

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
     <link rel="alternate icon" type="image/png" href="/static/media/favicon.png">
 
     <link rel="stylesheet" type="text/css" href="/static/css/fonts.css" {{ o('fonts') }}>
-    <link rel="stylesheet" type="text/css" href="/static/css/highlight.css" {{ o('use_hl') }}>
+    <link rel="stylesheet" type="text/css" href="/static/css/code_styles/{{ g.code_style }}.css" {{ o('use_hl') }}>
     <link rel="stylesheet" type="text/css" href="/static/css/extra.css" {{ o('extra_css') }}>
 
     <style id="body_width-related">
